SalesforceData/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>DNC</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Landline</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Mobile</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>No Number</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNC__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_of_date__c</fullName>
        <label>Follow up of date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Landline__c</fullName>
        <label>Landline</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_RSVP__c</fullName>
        <label>Lead RSVP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>DNC</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>DNC__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>DNC__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DNC</label>
        <queue>DNC</queue>
    </listViews>
    <listViews>
        <fullName>DNC_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DNC</label>
        <queue>DNC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Landline_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Landline</label>
        <queue>Landline</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobile_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Mobile</label>
        <queue>Mobile</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mumbai_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Mumbai Sales</label>
        <queue>Mumbai_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>No_Number_Lead</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>DNC__c</columns>
        <columns>No_Number__c</columns>
        <columns>Landline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>No_Number__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>No Number</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Queue_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Pune Sales</label>
        <queue>Pune_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Queue_assignment_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue assignment</label>
        <queue>Queue_assignment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <recordTypes>
        <fullName>Lead_DNC</fullName>
        <active>false</active>
        <businessProcess>DNC</businessProcess>
        <label>Lead DNC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Landline</fullName>
        <active>false</active>
        <businessProcess>Landline</businessProcess>
        <label>Lead Landline</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Mobile</fullName>
        <active>true</active>
        <businessProcess>Mobile</businessProcess>
        <label>Lead Mobile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_No_Number</fullName>
        <active>true</active>
        <businessProcess>No Number</businessProcess>
        <label>Lead No Number</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>